# models/utility.go
@@ -13,3 +13,12 @@ type ErrorResponse struct {
 type EmailListResponse struct {
 	Emails []string `json:"emails"`
 }
+
+type AliasListResponse struct {
+	Aliases []AliasResponse `json:"aliases"`
+}
+
+type AliasResponse struct {
+	Alias string `json:"alias"`
+	Email string `json:"email"`
+}
